# clothes-classifier

./: .gitignore  CNN_tools.py  LICENSE  NN_tools.py  README.md  clothes_driver.py  pyproject.toml  requirements.txt
src/clothes-classifier/: CLI_tools.py  CNN_tools.py  CONSTANTS.py  clothes_driver.py  img_utils.py
